# supdate

./: .gitignore  LICENSE  Pipfile  pyproject.toml  supdate.py
supdate/: __main__.py  cli.py  forge.py  index.py  libraries.py  package.py  profile.py  typed.py  utils.py  vanilla.py  versions.py
supdate/providers/: base.py  fabric.py  forge.py
